[package]
name = "bhh_rs"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6"
rayon = "1.0"

[dev-dependencies]
lazy_static = "1.3"
bencher = "0.1"

[[bench]]
name = "main"
harness = false

# For profiling
[profile.release]
debug = true
